# fstag

./: LICENSE  README.md  pyproject.toml
fstag/: __init__.py  __main__.py  store.py  ui.py
