[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fstag"
version = "0.1.0"
description = "Tag files with colored tags and browse them in a portable file-system UI"
requires-python = ">=3.9"
dependencies = []
license = "MIT"

[project.scripts]
fstag = "fstag.__main__:main"

[tool.setuptools.packages.find]
include = ["fstag*"]
